# minio_sender

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml
notebook/: minio_sender.ipynb
