[tool.poetry]
name = "minio-sender"
version = "0.1.0"
description = ""
authors = ["markirius <markbombomb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
minio = "^7.1.15"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
